Fix the styling issue that Text "Showing 1 to 20 of 20 entries" is cropped.
Issue: BMS-3944

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -319,12 +319,6 @@ div.DTFC_RightWrapper table.table-curved {
     table-layout: fixed;
 }
 
-#measurement-table_wrapper > div > div:nth-child(2) {
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-
 .form-group {
     margin-bottom: 6px;
 }
